<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

<!--    Strings for main_fragment-->
    <string name="statistics">Win: %1d \tDraw: %2d \tLose: %3d</string>
    <string name="first_fragment_label">Game fragment</string>
    <string name="historyButton">History</string>
    <string name="versus">V.S.</string>
    <string name="statisticLabel">Your all time statistics</string>
    <string name="welcome">Welcome</string>
    <string name="computerLabel">Computer</string>
    <string name="playerLabel">You</string>
    <string name="instructions">Instructions: Select rock, paper or scissors to play</string>

<!--    Strings for second Fragment-->

    <string name="second_fragment_label">History fragment</string>
    <string name="historyClearButton">Clear history</string>

<!--    Result of Game-->
    <string name="win">You Won!</string>
    <string name="Lose">You Lost!</string>
    <string name="Tie">You Tied?</string>
</resources>