<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/itemResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/versusLabel"
        app:layout_constraintStart_toStartOf="@id/versusLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/versusLabel"
        app:layout_constraintStart_toStartOf="@id/versusLabel"
        app:layout_constraintTop_toBottomOf="@id/itemResult" />

    <TextView
        android:id="@+id/playerItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/playerLabel"
        app:layout_constraintEnd_toEndOf="@id/playerImage"
        app:layout_constraintStart_toStartOf="@id/playerImage"
        app:layout_constraintTop_toBottomOf="@id/playerImage" />

    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@id/versusLabel"
        app:layout_constraintTop_toBottomOf="@id/itemDate" />

    <TextView
        android:id="@+id/versusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/versus"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/playerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playerImage" />

    <TextView
        android:id="@+id/computerItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/computerLabel"
        app:layout_constraintEnd_toEndOf="@id/computerImage"
        app:layout_constraintStart_toStartOf="@id/computerImage"
        app:layout_constraintTop_toBottomOf="@id/computerImage" />

    <ImageView
        android:id="@+id/computerImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@id/versusLabel"
        app:layout_constraintTop_toBottomOf="@id/itemDate" />

</androidx.constraintlayout.widget.ConstraintLayout>
